Fixes network widget info on mobile

--- a/packages/client/src/layout/network-widget.scss
+++ b/packages/client/src/layout/network-widget.scss
@@ -270,4 +270,8 @@
     position: absolute;
     right: 48px;
   }
+
+  .network-widget-info {
+    margin-top: 52px;
+  }
 }
